fix: update validation to be more visible and add whitespace exceptions (#40)
* fix: update validation to be more visible and add whitespace exceptions

* fix: consolidate

--- a/themes/vex-hugo/assets/scss/_customize.scss
+++ b/themes/vex-hugo/assets/scss/_customize.scss
@@ -131,6 +131,16 @@ header .dropdown-menu {
     background-color: #ca6363 !important;
 }
 
+.btn-validation-error {
+    // box-shadow: 0 0 5px 1px #ff5555;
+    background-color: #ffe1e1;
+}
+
+.btn-validation-error:focus {
+    // box-shadow: 0 0 5px 1px #ff5555 !important;
+    background-color: #ffe1e1;
+}
+
 a.inline {
     text-decoration: none !important;
 }
@@ -152,7 +162,11 @@ textarea.form-control {
 }
 
 .color-green {
-    color: ForestGreen;
+    color: ForestGreen !important;
+}
+
+.color-red {
+    color: Red !important;
 }
 
 // ANCHOR customers, certifications & partners
